compiler/src/parser/parser.output
State 124 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: func_def

    2 func_def: T_id '(' fpar_list ')' ':' r_type local_def_list compound_stmt
    3         | T_id '(' ')' ':' r_type local_def_list compound_stmt

    4 local_def_list: %empty
    5               | local_def_list local_def

    6 fpar_list: fpar_def
    7          | fpar_list ',' fpar_def

    8 fpar_def: T_id ':' "reference" type
    9         | T_id ':' type

   10 data_type: "int"
   11          | "byte"

   12 type: data_type
   13     | data_type '[' ']'

   14 r_type: data_type
   15       | "proc"

   16 local_def: func_def
   17          | var_def

   18 var_def: T_id ':' data_type ';'
   19        | T_id ':' data_type '[' T_const ']' ';'

   20 stmt: ';'
   21     | l_value '=' expr ';'
   22     | compound_stmt
   23     | func_call ';'
   24     | "if" '(' cond ')' stmt
   25     | "if" '(' cond ')' stmt "else" stmt
   26     | "while" '(' cond ')' stmt
   27     | "return" ';'
   28     | "return" expr ';'

   29 compound_stmt: '{' compound_stmt_helper '}'

   30 compound_stmt_helper: %empty
   31                     | compound_stmt_helper stmt

   32 func_call: T_id '(' ')'
   33          | T_id '(' expr_list ')'

   34 expr_list: expr
   35          | expr_list ',' expr

   36 expr: T_const
   37     | T_char
   38     | l_value
   39     | '(' expr ')'
   40     | func_call
   41     | '+' expr
   42     | '-' expr
   43     | expr '+' expr
   44     | expr '-' expr
   45     | expr '*' expr
   46     | expr '/' expr
   47     | expr '%' expr

   48 l_value: T_id
   49        | T_id '[' expr ']'
   50        | T_string

   51 cond: "true"
   52     | "false"
   53     | '(' cond ')'
   54     | '!' cond
   55     | expr "==" expr
   56     | expr "!=" expr
   57     | expr '<' expr
   58     | expr '>' expr
   59     | expr "<=" expr
   60     | expr ">=" expr
   61     | cond '&' cond
   62     | cond '|' cond


Terminals, with rules where they appear

    $end (0) 0
    '!' <op> (33) 54
    '%' <op> (37) 47
    '&' <op> (38) 61
    '(' (40) 2 3 24 25 26 32 33 39 53
    ')' (41) 2 3 24 25 26 32 33 39 53
    '*' <op> (42) 45
    '+' <op> (43) 41 43
    ',' (44) 7 35
    '-' <op> (45) 42 44
    '/' <op> (47) 46
    ':' (58) 2 3 8 9 18 19
    ';' (59) 18 19 20 21 23 27 28
    '<' <op> (60) 57
    '=' (61) 21
    '>' <op> (62) 58
    '[' (91) 13 19 49
    ']' (93) 13 19 49
    '{' (123) 29
    '|' <op> (124) 62
    '}' (125) 29
    error (256)
    "byte" (258) 11
    "int" (259) 10
    "if" (260) 24 25
    "else" (261) 25
    "true" (262) 51
    "false" (263) 52
    "proc" (264) 15
    "reference" (265) 8
    "return" (266) 27 28
    "while" (267) 26
    T_id <var> (268) 2 3 8 9 18 19 32 33 48 49
    T_const <num> (269) 19 36
    T_char <character> (270) 37
    T_string <var> (271) 50
    "==" <op> (272) 55
    "!=" <op> (273) 56
    "<=" <op> (274) 59
    ">=" <op> (275) 60


Nonterminals, with rules where they appear

    $accept (41)
        on left: 0
    program <lcl_def> (42)
        on left: 1
        on right: 0
    func_def <lcl_def> (43)
        on left: 2 3
        on right: 1 16
    local_def_list <local_def_list> (44)
        on left: 4 5
        on right: 2 3 5
    fpar_list <fpar_list> (45)
        on left: 6 7
        on right: 2 7
    fpar_def <fpar_def> (46)
        on left: 8 9
        on right: 6 7
    data_type <rtype> (47)
        on left: 10 11
        on right: 12 13 14 18 19
    type <rtype> (48)
        on left: 12 13
        on right: 8 9
    r_type <rtype> (49)
        on left: 14 15
        on right: 2 3
    local_def <lcl_def> (50)
        on left: 16 17
        on right: 5
    var_def <lcl_def> (51)
        on left: 18 19
        on right: 17
    stmt <stmt> (52)
        on left: 20 21 22 23 24 25 26 27 28
        on right: 24 25 26 31
    compound_stmt <cmpdstmt> (53)
        on left: 29
        on right: 2 3 22
    compound_stmt_helper <cmpdstmt> (54)
        on left: 30 31
        on right: 29 31
    func_call <func_call> (55)
        on left: 32 33
        on right: 23 40
    expr_list <expr_list> (56)
        on left: 34 35
        on right: 33 35
    expr <expr> (57)
        on left: 36 37 38 39 40 41 42 43 44 45 46 47
        on right: 21 28 34 35 39 41 42 43 44 45 46 47 49 55 56 57 58 59 60
    l_value <lvalue> (58)
        on left: 48 49 50
        on right: 21 38
    cond <cond> (59)
        on left: 51 52 53 54 55 56 57 58 59 60 61 62
        on right: 24 25 26 53 54 61 62


State 0

    0 $accept: . program $end

    T_id  shift, and go to state 1

    program   go to state 2
    func_def  go to state 3


State 1

    2 func_def: T_id . '(' fpar_list ')' ':' r_type local_def_list compound_stmt
    3         | T_id . '(' ')' ':' r_type local_def_list compound_stmt

    '('  shift, and go to state 4


State 2

    0 $accept: program . $end

    $end  shift, and go to state 5


State 3

    1 program: func_def .

    $default  reduce using rule 1 (program)


State 4

    2 func_def: T_id '(' . fpar_list ')' ':' r_type local_def_list compound_stmt
    3         | T_id '(' . ')' ':' r_type local_def_list compound_stmt

    T_id  shift, and go to state 6
    ')'   shift, and go to state 7

    fpar_list  go to state 8
    fpar_def   go to state 9


State 5

    0 $accept: program $end .

    $default  accept


State 6

    8 fpar_def: T_id . ':' "reference" type
    9         | T_id . ':' type

    ':'  shift, and go to state 10


State 7

    3 func_def: T_id '(' ')' . ':' r_type local_def_list compound_stmt

    ':'  shift, and go to state 11


State 8

    2 func_def: T_id '(' fpar_list . ')' ':' r_type local_def_list compound_stmt
    7 fpar_list: fpar_list . ',' fpar_def

    ')'  shift, and go to state 12
    ','  shift, and go to state 13


State 9

    6 fpar_list: fpar_def .

    $default  reduce using rule 6 (fpar_list)


State 10

    8 fpar_def: T_id ':' . "reference" type
    9         | T_id ':' . type

    "byte"       shift, and go to state 14
    "int"        shift, and go to state 15
    "reference"  shift, and go to state 16

    data_type  go to state 17
    type       go to state 18


State 11

    3 func_def: T_id '(' ')' ':' . r_type local_def_list compound_stmt

    "byte"  shift, and go to state 14
    "int"   shift, and go to state 15
    "proc"  shift, and go to state 19

    data_type  go to state 20
    r_type     go to state 21


State 12

    2 func_def: T_id '(' fpar_list ')' . ':' r_type local_def_list compound_stmt

    ':'  shift, and go to state 22


State 13

    7 fpar_list: fpar_list ',' . fpar_def

    T_id  shift, and go to state 6

    fpar_def  go to state 23


State 14

   11 data_type: "byte" .

    $default  reduce using rule 11 (data_type)


State 15

   10 data_type: "int" .

    $default  reduce using rule 10 (data_type)


State 16

    8 fpar_def: T_id ':' "reference" . type

    "byte"  shift, and go to state 14
    "int"   shift, and go to state 15

    data_type  go to state 17
    type       go to state 24


State 17

   12 type: data_type .
   13     | data_type . '[' ']'

    '['  shift, and go to state 25

    $default  reduce using rule 12 (type)


State 18

    9 fpar_def: T_id ':' type .

    $default  reduce using rule 9 (fpar_def)


State 19

   15 r_type: "proc" .

    $default  reduce using rule 15 (r_type)


State 20

   14 r_type: data_type .

    $default  reduce using rule 14 (r_type)


State 21

    3 func_def: T_id '(' ')' ':' r_type . local_def_list compound_stmt

    $default  reduce using rule 4 (local_def_list)

    local_def_list  go to state 26


State 22

    2 func_def: T_id '(' fpar_list ')' ':' . r_type local_def_list compound_stmt

    "byte"  shift, and go to state 14
    "int"   shift, and go to state 15
    "proc"  shift, and go to state 19

    data_type  go to state 20
    r_type     go to state 27


State 23

    7 fpar_list: fpar_list ',' fpar_def .

    $default  reduce using rule 7 (fpar_list)


State 24

    8 fpar_def: T_id ':' "reference" type .

    $default  reduce using rule 8 (fpar_def)


State 25

   13 type: data_type '[' . ']'

    ']'  shift, and go to state 28


State 26

    3 func_def: T_id '(' ')' ':' r_type local_def_list . compound_stmt
    5 local_def_list: local_def_list . local_def

    T_id  shift, and go to state 29
    '{'   shift, and go to state 30

    func_def       go to state 31
    local_def      go to state 32
    var_def        go to state 33
    compound_stmt  go to state 34


State 27

    2 func_def: T_id '(' fpar_list ')' ':' r_type . local_def_list compound_stmt

    $default  reduce using rule 4 (local_def_list)

    local_def_list  go to state 35


State 28

   13 type: data_type '[' ']' .

    $default  reduce using rule 13 (type)


State 29

    2 func_def: T_id . '(' fpar_list ')' ':' r_type local_def_list compound_stmt
    3         | T_id . '(' ')' ':' r_type local_def_list compound_stmt
   18 var_def: T_id . ':' data_type ';'
   19        | T_id . ':' data_type '[' T_const ']' ';'

    '('  shift, and go to state 4
    ':'  shift, and go to state 36


State 30

   29 compound_stmt: '{' . compound_stmt_helper '}'

    $default  reduce using rule 30 (compound_stmt_helper)

    compound_stmt_helper  go to state 37


State 31

   16 local_def: func_def .

    $default  reduce using rule 16 (local_def)


State 32

    5 local_def_list: local_def_list local_def .

    $default  reduce using rule 5 (local_def_list)


State 33

   17 local_def: var_def .

    $default  reduce using rule 17 (local_def)


State 34

    3 func_def: T_id '(' ')' ':' r_type local_def_list compound_stmt .

    $default  reduce using rule 3 (func_def)


State 35

    2 func_def: T_id '(' fpar_list ')' ':' r_type local_def_list . compound_stmt
    5 local_def_list: local_def_list . local_def

    T_id  shift, and go to state 29
    '{'   shift, and go to state 30

    func_def       go to state 31
    local_def      go to state 32
    var_def        go to state 33
    compound_stmt  go to state 38


State 36

   18 var_def: T_id ':' . data_type ';'
   19        | T_id ':' . data_type '[' T_const ']' ';'

    "byte"  shift, and go to state 14
    "int"   shift, and go to state 15

    data_type  go to state 39


State 37

   29 compound_stmt: '{' compound_stmt_helper . '}'
   31 compound_stmt_helper: compound_stmt_helper . stmt

    "if"      shift, and go to state 40
    "return"  shift, and go to state 41
    "while"   shift, and go to state 42
    T_id      shift, and go to state 43
    T_string  shift, and go to state 44
    ';'       shift, and go to state 45
    '{'       shift, and go to state 30
    '}'       shift, and go to state 46

    stmt           go to state 47
    compound_stmt  go to state 48
    func_call      go to state 49
    l_value        go to state 50


State 38

    2 func_def: T_id '(' fpar_list ')' ':' r_type local_def_list compound_stmt .

    $default  reduce using rule 2 (func_def)


State 39

   18 var_def: T_id ':' data_type . ';'
   19        | T_id ':' data_type . '[' T_const ']' ';'

    '['  shift, and go to state 51
    ';'  shift, and go to state 52


State 40

   24 stmt: "if" . '(' cond ')' stmt
   25     | "if" . '(' cond ')' stmt "else" stmt

    '('  shift, and go to state 53


State 41

   27 stmt: "return" . ';'
   28     | "return" . expr ';'

    T_id      shift, and go to state 43
    T_const   shift, and go to state 54
    T_char    shift, and go to state 55
    T_string  shift, and go to state 44
    '+'       shift, and go to state 56
    '-'       shift, and go to state 57
    '('       shift, and go to state 58
    ';'       shift, and go to state 59

    func_call  go to state 60
    expr       go to state 61
    l_value    go to state 62


State 42

   26 stmt: "while" . '(' cond ')' stmt

    '('  shift, and go to state 63


State 43

   32 func_call: T_id . '(' ')'
   33          | T_id . '(' expr_list ')'
   48 l_value: T_id .
   49        | T_id . '[' expr ']'

    '('  shift, and go to state 64
    '['  shift, and go to state 65

    $default  reduce using rule 48 (l_value)


State 44

   50 l_value: T_string .

    $default  reduce using rule 50 (l_value)


State 45

   20 stmt: ';' .

    $default  reduce using rule 20 (stmt)


State 46

   29 compound_stmt: '{' compound_stmt_helper '}' .

    $default  reduce using rule 29 (compound_stmt)


State 47

   31 compound_stmt_helper: compound_stmt_helper stmt .

    $default  reduce using rule 31 (compound_stmt_helper)


State 48

   22 stmt: compound_stmt .

    $default  reduce using rule 22 (stmt)


State 49

   23 stmt: func_call . ';'

    ';'  shift, and go to state 66


State 50

   21 stmt: l_value . '=' expr ';'

    '='  shift, and go to state 67


State 51

   19 var_def: T_id ':' data_type '[' . T_const ']' ';'

    T_const  shift, and go to state 68


State 52

   18 var_def: T_id ':' data_type ';' .

    $default  reduce using rule 18 (var_def)


State 53

   24 stmt: "if" '(' . cond ')' stmt
   25     | "if" '(' . cond ')' stmt "else" stmt

    "true"    shift, and go to state 69
    "false"   shift, and go to state 70
    T_id      shift, and go to state 43
    T_const   shift, and go to state 54
    T_char    shift, and go to state 55
    T_string  shift, and go to state 44
    '+'       shift, and go to state 56
    '-'       shift, and go to state 57
    '!'       shift, and go to state 71
    '('       shift, and go to state 72

    func_call  go to state 60
    expr       go to state 73
    l_value    go to state 62
    cond       go to state 74


State 54

   36 expr: T_const .

    $default  reduce using rule 36 (expr)


State 55

   37 expr: T_char .

    $default  reduce using rule 37 (expr)


State 56

   41 expr: '+' . expr

    T_id      shift, and go to state 43
    T_const   shift, and go to state 54
    T_char    shift, and go to state 55
    T_string  shift, and go to state 44
    '+'       shift, and go to state 56
    '-'       shift, and go to state 57
    '('       shift, and go to state 58

    func_call  go to state 60
    expr       go to state 75
    l_value    go to state 62


State 57

   42 expr: '-' . expr

    T_id      shift, and go to state 43
    T_const   shift, and go to state 54
    T_char    shift, and go to state 55
    T_string  shift, and go to state 44
    '+'       shift, and go to state 56
    '-'       shift, and go to state 57
    '('       shift, and go to state 58

    func_call  go to state 60
    expr       go to state 76
    l_value    go to state 62


State 58

   39 expr: '(' . expr ')'

    T_id      shift, and go to state 43
    T_const   shift, and go to state 54
    T_char    shift, and go to state 55
    T_string  shift, and go to state 44
    '+'       shift, and go to state 56
    '-'       shift, and go to state 57
    '('       shift, and go to state 58

    func_call  go to state 60
    expr       go to state 77
    l_value    go to state 62


State 59

   27 stmt: "return" ';' .

    $default  reduce using rule 27 (stmt)


State 60

   40 expr: func_call .

    $default  reduce using rule 40 (expr)


State 61

   28 stmt: "return" expr . ';'
   43 expr: expr . '+' expr
   44     | expr . '-' expr
   45     | expr . '*' expr
   46     | expr . '/' expr
   47     | expr . '%' expr

    '+'  shift, and go to state 78
    '-'  shift, and go to state 79
    '*'  shift, and go to state 80
    '/'  shift, and go to state 81
    '%'  shift, and go to state 82
    ';'  shift, and go to state 83


State 62

   38 expr: l_value .

    $default  reduce using rule 38 (expr)


State 63

   26 stmt: "while" '(' . cond ')' stmt

    "true"    shift, and go to state 69
    "false"   shift, and go to state 70
    T_id      shift, and go to state 43
    T_const   shift, and go to state 54
    T_char    shift, and go to state 55
    T_string  shift, and go to state 44
    '+'       shift, and go to state 56
    '-'       shift, and go to state 57
    '!'       shift, and go to state 71
    '('       shift, and go to state 72

    func_call  go to state 60
    expr       go to state 73
    l_value    go to state 62
    cond       go to state 84


State 64

   32 func_call: T_id '(' . ')'
   33          | T_id '(' . expr_list ')'

    T_id      shift, and go to state 43
    T_const   shift, and go to state 54
    T_char    shift, and go to state 55
    T_string  shift, and go to state 44
    '+'       shift, and go to state 56
    '-'       shift, and go to state 57
    '('       shift, and go to state 58
    ')'       shift, and go to state 85

    func_call  go to state 60
    expr_list  go to state 86
    expr       go to state 87
    l_value    go to state 62


State 65

   49 l_value: T_id '[' . expr ']'

    T_id      shift, and go to state 43
    T_const   shift, and go to state 54
    T_char    shift, and go to state 55
    T_string  shift, and go to state 44
    '+'       shift, and go to state 56
    '-'       shift, and go to state 57
    '('       shift, and go to state 58

    func_call  go to state 60
    expr       go to state 88
    l_value    go to state 62


State 66

   23 stmt: func_call ';' .

    $default  reduce using rule 23 (stmt)


State 67

   21 stmt: l_value '=' . expr ';'

    T_id      shift, and go to state 43
    T_const   shift, and go to state 54
    T_char    shift, and go to state 55
    T_string  shift, and go to state 44
    '+'       shift, and go to state 56
    '-'       shift, and go to state 57
    '('       shift, and go to state 58

    func_call  go to state 60
    expr       go to state 89
    l_value    go to state 62


State 68

   19 var_def: T_id ':' data_type '[' T_const . ']' ';'

    ']'  shift, and go to state 90


State 69

   51 cond: "true" .

    $default  reduce using rule 51 (cond)


State 70

   52 cond: "false" .

    $default  reduce using rule 52 (cond)


State 71

   54 cond: '!' . cond

    "true"    shift, and go to state 69
    "false"   shift, and go to state 70
    T_id      shift, and go to state 43
    T_const   shift, and go to state 54
    T_char    shift, and go to state 55
    T_string  shift, and go to state 44
    '+'       shift, and go to state 56
    '-'       shift, and go to state 57
    '!'       shift, and go to state 71
    '('       shift, and go to state 72

    func_call  go to state 60
    expr       go to state 73
    l_value    go to state 62
    cond       go to state 91


State 72

   39 expr: '(' . expr ')'
   53 cond: '(' . cond ')'

    "true"    shift, and go to state 69
    "false"   shift, and go to state 70
    T_id      shift, and go to state 43
    T_const   shift, and go to state 54
    T_char    shift, and go to state 55
    T_string  shift, and go to state 44
    '+'       shift, and go to state 56
    '-'       shift, and go to state 57
    '!'       shift, and go to state 71
    '('       shift, and go to state 72

    func_call  go to state 60
    expr       go to state 92
    l_value    go to state 62
    cond       go to state 93


State 73

   43 expr: expr . '+' expr
   44     | expr . '-' expr
   45     | expr . '*' expr
   46     | expr . '/' expr
   47     | expr . '%' expr
   55 cond: expr . "==" expr
   56     | expr . "!=" expr
   57     | expr . '<' expr
   58     | expr . '>' expr
   59     | expr . "<=" expr
   60     | expr . ">=" expr

    "=="  shift, and go to state 94
    "!="  shift, and go to state 95
    "<="  shift, and go to state 96
    ">="  shift, and go to state 97
    '>'   shift, and go to state 98
    '<'   shift, and go to state 99
    '+'   shift, and go to state 78
    '-'   shift, and go to state 79
    '*'   shift, and go to state 80
    '/'   shift, and go to state 81
    '%'   shift, and go to state 82


State 74

   24 stmt: "if" '(' cond . ')' stmt
   25     | "if" '(' cond . ')' stmt "else" stmt
   61 cond: cond . '&' cond
   62     | cond . '|' cond

    '|'  shift, and go to state 100
    '&'  shift, and go to state 101
    ')'  shift, and go to state 102


State 75

   41 expr: '+' expr .
   43     | expr . '+' expr
   44     | expr . '-' expr
   45     | expr . '*' expr
   46     | expr . '/' expr
   47     | expr . '%' expr

    '*'  shift, and go to state 80
    '/'  shift, and go to state 81
    '%'  shift, and go to state 82

    $default  reduce using rule 41 (expr)


State 76

   42 expr: '-' expr .
   43     | expr . '+' expr
   44     | expr . '-' expr
   45     | expr . '*' expr
   46     | expr . '/' expr
   47     | expr . '%' expr

    '*'  shift, and go to state 80
    '/'  shift, and go to state 81
    '%'  shift, and go to state 82

    $default  reduce using rule 42 (expr)


State 77

   39 expr: '(' expr . ')'
   43     | expr . '+' expr
   44     | expr . '-' expr
   45     | expr . '*' expr
   46     | expr . '/' expr
   47     | expr . '%' expr

    '+'  shift, and go to state 78
    '-'  shift, and go to state 79
    '*'  shift, and go to state 80
    '/'  shift, and go to state 81
    '%'  shift, and go to state 82
    ')'  shift, and go to state 103


State 78

   43 expr: expr '+' . expr

    T_id      shift, and go to state 43
    T_const   shift, and go to state 54
    T_char    shift, and go to state 55
    T_string  shift, and go to state 44
    '+'       shift, and go to state 56
    '-'       shift, and go to state 57
    '('       shift, and go to state 58

    func_call  go to state 60
    expr       go to state 104
    l_value    go to state 62


State 79

   44 expr: expr '-' . expr

    T_id      shift, and go to state 43
    T_const   shift, and go to state 54
    T_char    shift, and go to state 55
    T_string  shift, and go to state 44
    '+'       shift, and go to state 56
    '-'       shift, and go to state 57
    '('       shift, and go to state 58

    func_call  go to state 60
    expr       go to state 105
    l_value    go to state 62


State 80

   45 expr: expr '*' . expr

    T_id      shift, and go to state 43
    T_const   shift, and go to state 54
    T_char    shift, and go to state 55
    T_string  shift, and go to state 44
    '+'       shift, and go to state 56
    '-'       shift, and go to state 57
    '('       shift, and go to state 58

    func_call  go to state 60
    expr       go to state 106
    l_value    go to state 62


State 81

   46 expr: expr '/' . expr

    T_id      shift, and go to state 43
    T_const   shift, and go to state 54
    T_char    shift, and go to state 55
    T_string  shift, and go to state 44
    '+'       shift, and go to state 56
    '-'       shift, and go to state 57
    '('       shift, and go to state 58

    func_call  go to state 60
    expr       go to state 107
    l_value    go to state 62


State 82

   47 expr: expr '%' . expr

    T_id      shift, and go to state 43
    T_const   shift, and go to state 54
    T_char    shift, and go to state 55
    T_string  shift, and go to state 44
    '+'       shift, and go to state 56
    '-'       shift, and go to state 57
    '('       shift, and go to state 58

    func_call  go to state 60
    expr       go to state 108
    l_value    go to state 62


State 83

   28 stmt: "return" expr ';' .

    $default  reduce using rule 28 (stmt)


State 84

   26 stmt: "while" '(' cond . ')' stmt
   61 cond: cond . '&' cond
   62     | cond . '|' cond

    '|'  shift, and go to state 100
    '&'  shift, and go to state 101
    ')'  shift, and go to state 109


State 85

   32 func_call: T_id '(' ')' .

    $default  reduce using rule 32 (func_call)


State 86

   33 func_call: T_id '(' expr_list . ')'
   35 expr_list: expr_list . ',' expr

    ')'  shift, and go to state 110
    ','  shift, and go to state 111


State 87

   34 expr_list: expr .
   43 expr: expr . '+' expr
   44     | expr . '-' expr
   45     | expr . '*' expr
   46     | expr . '/' expr
   47     | expr . '%' expr

    '+'  shift, and go to state 78
    '-'  shift, and go to state 79
    '*'  shift, and go to state 80
    '/'  shift, and go to state 81
    '%'  shift, and go to state 82

    $default  reduce using rule 34 (expr_list)


State 88

   43 expr: expr . '+' expr
   44     | expr . '-' expr
   45     | expr . '*' expr
   46     | expr . '/' expr
   47     | expr . '%' expr
   49 l_value: T_id '[' expr . ']'

    '+'  shift, and go to state 78
    '-'  shift, and go to state 79
    '*'  shift, and go to state 80
    '/'  shift, and go to state 81
    '%'  shift, and go to state 82
    ']'  shift, and go to state 112


State 89

   21 stmt: l_value '=' expr . ';'
   43 expr: expr . '+' expr
   44     | expr . '-' expr
   45     | expr . '*' expr
   46     | expr . '/' expr
   47     | expr . '%' expr

    '+'  shift, and go to state 78
    '-'  shift, and go to state 79
    '*'  shift, and go to state 80
    '/'  shift, and go to state 81
    '%'  shift, and go to state 82
    ';'  shift, and go to state 113


State 90

   19 var_def: T_id ':' data_type '[' T_const ']' . ';'

    ';'  shift, and go to state 114


State 91

   54 cond: '!' cond .
   61     | cond . '&' cond
   62     | cond . '|' cond

    $default  reduce using rule 54 (cond)


State 92

   39 expr: '(' expr . ')'
   43     | expr . '+' expr
   44     | expr . '-' expr
   45     | expr . '*' expr
   46     | expr . '/' expr
   47     | expr . '%' expr
   55 cond: expr . "==" expr
   56     | expr . "!=" expr
   57     | expr . '<' expr
   58     | expr . '>' expr
   59     | expr . "<=" expr
   60     | expr . ">=" expr

    "=="  shift, and go to state 94
    "!="  shift, and go to state 95
    "<="  shift, and go to state 96
    ">="  shift, and go to state 97
    '>'   shift, and go to state 98
    '<'   shift, and go to state 99
    '+'   shift, and go to state 78
    '-'   shift, and go to state 79
    '*'   shift, and go to state 80
    '/'   shift, and go to state 81
    '%'   shift, and go to state 82
    ')'   shift, and go to state 103


State 93

   53 cond: '(' cond . ')'
   61     | cond . '&' cond
   62     | cond . '|' cond

    '|'  shift, and go to state 100
    '&'  shift, and go to state 101
    ')'  shift, and go to state 115


State 94

   55 cond: expr "==" . expr

    T_id      shift, and go to state 43
    T_const   shift, and go to state 54
    T_char    shift, and go to state 55
    T_string  shift, and go to state 44
    '+'       shift, and go to state 56
    '-'       shift, and go to state 57
    '('       shift, and go to state 58

    func_call  go to state 60
    expr       go to state 116
    l_value    go to state 62


State 95

   56 cond: expr "!=" . expr

    T_id      shift, and go to state 43
    T_const   shift, and go to state 54
    T_char    shift, and go to state 55
    T_string  shift, and go to state 44
    '+'       shift, and go to state 56
    '-'       shift, and go to state 57
    '('       shift, and go to state 58

    func_call  go to state 60
    expr       go to state 117
    l_value    go to state 62


State 96

   59 cond: expr "<=" . expr

    T_id      shift, and go to state 43
    T_const   shift, and go to state 54
    T_char    shift, and go to state 55
    T_string  shift, and go to state 44
    '+'       shift, and go to state 56
    '-'       shift, and go to state 57
    '('       shift, and go to state 58

    func_call  go to state 60
    expr       go to state 118
    l_value    go to state 62


State 97

   60 cond: expr ">=" . expr

    T_id      shift, and go to state 43
    T_const   shift, and go to state 54
    T_char    shift, and go to state 55
    T_string  shift, and go to state 44
    '+'       shift, and go to state 56
    '-'       shift, and go to state 57
    '('       shift, and go to state 58

    func_call  go to state 60
    expr       go to state 119
    l_value    go to state 62


State 98

   58 cond: expr '>' . expr

    T_id      shift, and go to state 43
    T_const   shift, and go to state 54
    T_char    shift, and go to state 55
    T_string  shift, and go to state 44
    '+'       shift, and go to state 56
    '-'       shift, and go to state 57
    '('       shift, and go to state 58
